# TEST

./: .gitignore.swp  package.xml  setup.cfg  setup.py
hand_tracking_pkg/: hand_tracking_node.py
hand_tracking_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hand_tracking_pkg/log/: latest_build
install/: local_setup.sh  setup.sh
install/hand_tracking_pkg/lib/hand_tracking_pkg/: hand_tracking_node  img_publisher  img_subscriber
install/hand_tracking_pkg/share/hand_tracking_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/log/: latest_build
log/: latest_build
