<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_tracking_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 package for hand tracking using OpenCV and Mediapipe</description>
  <maintainer email="yangjunseok@todo.todo">yangjunseok</maintainer>
  <license>Apache-2.0</license>
 
  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <!-- 터틀봇 제어 패키지 의존성 추가 -->
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>

